github: bump msbuild version.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -21,15 +21,15 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v2
       - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.0.2
+        uses: microsoft/setup-msbuild@v1.1
         with:
-          vs-version: 16.4
+          vs-version: 16.8
       - name: Set MSVC command prompt
         uses: ilammy/msvc-dev-cmd@v1
       - name: Mkdir
         run: mkdir build
       - name: Cmake
-        run: cmake -A x64 ..
+        run: cmake -DCMAKE_SYSTEM_VERSION=10.0.20348.0 -A x64 ..
         env:
           PLATFORM: x64
           WIRESHARK_BASE_DIR: C:/wireshark-libs
